--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -1,1 +1,11 @@
-tes
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>halaman movies</title>
+  </head>
+  <body>
+    <h1>halaman movies</h1>
+
+  </body>
+</html>
