--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -5,6 +5,29 @@
 </head>
 <body>
 <h3>Halaman Movies</h3>
-
+<table>
+	<thead>
+		<td>ID</td>
+		<td>Name</td>
+		<td>Year</td>
+		<td>Genre</td>
+		<td>ProdHouse</td>
+		<td>Action</td>
+	</thead>
+	<tbody>
+		<%movies.forEach(movie=>{%>
+		<tr>
+			<td><%=movie.id%></td>
+			<td><%=movie.name%></td>
+			<td><%=movie.released_year%></td>
+			<td><%=movie.genre%></td>
+			<td><%=movie.name_prodHouse%></td>
+			<td>
+				<a href="/movies/edit/<%=movie.id%>">Edit</a>
+			</td>
+		</tr>
+		<%})%>
+	</tbody>
+</table>
 </body>
 </html>
