--- a/views/prodHouses.ejs
+++ b/views/prodHouses.ejs
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<% console.log(dataHouses) %>
 <html>
   <head>
     <meta charset="utf-8">
@@ -6,5 +7,13 @@
   </head>
   <body>
     <h1>Halaman Prod. House</h1>
+    <table>
+      <% for(let i = 0; i < dataHouses.length; i++){%>
+        <tr>
+          <td><%=dataHouses[i].name_prodHouse%></td>
+          <td><%=dataHouse[i].origin_city%></td>
+        </tr>
+      <%}%>
+    </table>
   </body>
 </html>
