--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,13 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.0/css/bulma.min.css">
     <title>Home</title>
   </head>
   <body>
-    <h1>HOME</h1>
-    <a href="/">Home</a>
-    <a href="/movie">Movie</a>
-    <a href="/prodHouses">ProHouses</a>
 
+    <nav class="breadcrumb is-centered" aria-label="breadcrumbs">
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li> <a href="/movie">Movie</a></li>
+        <li><a href="/prodHouses">ProHouses</a></li>
+      </ul>
+    </nav>
+    <h1 class="title">HOME</h1>
   </body>
 </html>
