--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -1,1 +1,31 @@
-Halaman Movies
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Halaman movie</title>
+  </head>
+  <body>
+    <table>
+      <tr>
+        <th>id</th>
+        <th>name</th>
+        <th>released</th>
+        <th>genre</th>
+        <th>prod house</th>
+        <th>origin city</th>
+        <th>Action</th>
+      </tr>
+      <% movies.forEach(m=>{ %>
+        <tr>
+          <td><%= m.id %></td>
+          <td><%= m.name %></td>
+          <td><%= m.released_year %></td>
+          <td><%= m.genre %></td>
+          <td><%= m.name_prodHouse %></td>
+          <td><%= m.origin_city %></td>
+          <td><a href="/movies/edit/<%= m.id %>">EDIT</a></td>
+        </tr>
+      <% }) %>
+    </table>
+  </body>
+</html>
