--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,11 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="assets/css/bulma.min.css" type="text/css">
   <link rel="stylesheet" href="assets/css/mystyle.css" type="text/css">
-  <title>Document</title>
+  <title>Home</title>
 </head>
 <body>
+  <% include assets/partials/nav-bar %>
 
-  <h1>home</h1>
+  <div class="container">
+
+  </div>
 
 </body>
 </html>
