--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -6,9 +6,40 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="assets/css/bulma.min.css" type="text/css">
   <link rel="stylesheet" href="assets/css/mystyle.css" type="text/css">
-  <title>Document</title>
+  <title>Movies</title>
 </head>
 <body>
-<h1>movies</h1>
+
+  <% include assets/partials/nav-bar %>
+
+  <div class="container">
+
+    <table class="table is-bordered is-striped is-narrow is-fullwidth">
+      <thead>
+        <tr>
+          <th>MOVIE</th>
+          <th>RELEASE YEAR</th>
+          <th>GENRE</th>
+          <th>PRODUCTION HOUSE</th>
+          <th>OPTIONS</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% for(let i=0; i<data_Movies.length; i++){%>
+          <tr>
+            <td><%=data_Movies[i].name%></td>
+            <td><%=data_Movies[i].released_year%></td>
+            <td><%=data_Movies[i].genre%></td>
+            <td><%=data_Movies[i].name_prodHouse%></td>
+            <td>
+              <a href="/movies/edit/:id">EDIT</a>
+            </td>
+          </tr>
+        <%}%>
+      </tbody>
+    </table>
+
+  </div>
+
 </body>
 </html>
