--- a/views/prodHouses.ejs
+++ b/views/prodHouses.ejs
@@ -6,9 +6,30 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="assets/css/bulma.min.css" type="text/css">
   <link rel="stylesheet" href="assets/css/mystyle.css" type="text/css">
-  <title>Document</title>
+  <title>prodHouses</title>
 </head>
 <body>
-<h1>prodHouses</h1>
+  <% include assets/partials/nav-bar %>
+
+  <div class="container">
+
+    <table class="table is-bordered is-striped is-narrow is-fullwidth">
+      <thead>
+        <tr>
+          <th>NAME</th>
+          <th>CITY</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% for(let i=0; i<data_Ph.length; i++){%>
+          <tr>
+            <td><%=data_Ph[i].name_prodHouse%></td>
+            <td><%=data_Ph[i].origin_city%></td>
+          </tr>
+        <%}%>
+      </tbody>
+    </table>
+
+  </div>
 </body>
 </html>
