eror di left join

--- a/views/prodhouse.ejs
+++ b/views/prodhouse.ejs
@@ -5,6 +5,19 @@
     <title></title>
   </head>
   <body>
-    ini prodhouse
+    <table>
+      <tr>
+        <th>id</th>
+        <th>name prodhouse</th>
+        <th>origin city</th>
+      </tr>
+      <%for(let i = 0;i< rows.length; i++){%>
+        <tr>
+          <td><%=rows[i].id%></td>
+          <td><%=rows[i].name_prodHouse%></td>
+          <td><%=rows[i].origin_city%></td>
+        </tr>
+      <%}%>
+    </table>
   </body>
 </html>
