--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -5,6 +5,22 @@
     <title></title>
   </head>
   <body>
-    ini halaman movies
+    <table>
+      <tr>
+        <th>id</th>
+        <th>name </th>
+        <th>releasedn years</th>
+        <th>genre</th>
+        <th>prod houses</th>
+      </tr>
+      <%for(let i = 0;i< rows.length; i++){%>
+        <tr>
+          <td><%=rows[i].id%></td>
+          <td><%=rows[i].name%></td>
+          <td><%=rows[i].released_year%></td>
+          <td><%=rows[i].genre%></td>
+          <td><%=rows[i].prodHouseld%></td>
+        </tr>
+      <%}%>
   </body>
 </html>
