--- a/views/productionHouse.ejs
+++ b/views/productionHouse.ejs
@@ -5,5 +5,21 @@
 </head>
 <body>
 	<h1> Halaman Prod. House</h1>
+	<table border="1">
+		<thead>
+			<tr>
+				<th> NAMA </th>
+				<th> CITY </th>
+			</tr>	
+		</thead>
+		<tbody>
+			<% for (let i = 0 ; i < data.length ; i++){%>
+			<tr>
+				<td><%= data[i].name_prodHouse %></td>
+				<td><%= data[i].origin_city %></td>
+			</tr>
+			<%}%>
+		</tbody>
+	</table>
 </body>
 </html>
