--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -5,6 +5,16 @@
     <title></title>
   </head>
   <body>
-halaman movie
+    <%=rows%>
+    <h2>Movie</h2>
+      <table>
+        <thead>
+          <td>NAME</td>
+          <td>REALESE</td>
+          <td>GENRE</td>
+          <td>Production House</td>
+        </thead>
+
+      </table>
   </body>
 </html>
