--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -2,9 +2,26 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Movies</title>
   </head>
   <body>
-    <h1>Halaman movies</h1>
+    <table>
+      <tr>
+        <th>Name</th>
+        <th>Released Year</th>
+        <th>Genre</th>
+        <th>Production House</th>
+        <th>Action</th>
+      </tr>
+      <%rows.forEach((row) => { %>
+        <tr>
+        <td><%=row.name%></td>
+        <td><%=row.released_year%></td>
+        <td><%=row.genre%></td>
+        <td><%=row.name_prodHouse%></td>
+        <td><a href="/movies/edit/<%=row.id%>">Edit</a></td>
+        </tr>
+      <%})%>
+    </table>
   </body>
 </html>
