--- a/public/movies.ejs
+++ b/public/movies.ejs
@@ -6,6 +6,26 @@
     <title>Movies</title>
 </head>
 <body>
-    Halaman Movies
+    <h1>Halaman Movies</h1>
+    <table border="1">
+        <tr>
+            <td>Movie</td>
+            <td>Released Year</td>
+            <td>Genre</td>
+            <td>Production House</td>
+            <td>Action</td>
+        </tr>
+        <%movRows.map((value)=>{%>
+        <tr>
+            <td><%=value.name%></td>
+            <td><%=value.released_year%></td>
+            <td><%=value.genre%></td>
+            <td><%=value.name_prodHouse%></td>
+            <td>
+                <a href="/movies/edit/<%=value.id%>">Edit</a>
+            </td>
+        </tr>
+        <%})%>
+    </table>
 </body>
 </html>
