--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -1,16 +1,30 @@
-<html lang="en">
-<head>
-  <title>halaman movies</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
-<body>
+<%-include('./partials/header')%>
+
 
 
 <h2>halaman movies</h2>
+<div class="container">
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Released Year</th>
+        <th>Genre</th>
+        <th>Production House</th>
+        <th>Options</th>
+      </tr>
+    </thead>
+    <tbody>
+    <%rows.forEach(movie =>{%>
+      <tr>
+        <td><%=movie.name%></td>
+        <td><%=movie.released_year%></td>
+        <td><%=movie.genre%></td>
+        <td><%=movie.name_prodHouse%></td>
+        <td><a href="/movies/edit/<%=movie.id%>">Edit</a></td>
+      </tr>
+      <%})%>
+    </tbody>
+  </table>
 
-</body>
-</html>
+<%-include('./partials/footer')%>
