--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -6,5 +6,28 @@
   </head>
   <body>
     <h1>Halaman Movies</h1>
+    <table border="1">
+        <tr>
+          <th>ID</th>
+          <th>Movie</th>
+          <th>Released Year</th>e
+          <th>Genre</th>
+          <th>Production House</th>
+          <th>Option</th>
+        </tr>
+        <%movies.forEach(movie => {%>
+        <tr>
+          <td><%=movie.id%></td>
+          <td><%=movie.name%></td>
+          <td><%=movie.released_year%></td>
+          <td><%=movie.genre%></td>
+          <td><%=movie.name_prodHouse%></td>
+          <td>
+            <a href="/movies/edit/<%=movie.id%>">Edit</a>
+          </td>
+        </tr>
+        <%})%>
+    </table>
+
   </body>
 </html>
