--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -6,5 +6,27 @@
 </head>
 <body>
 	<h1>Halaman Movies</h1>
+
+	<table border="1">
+		<tr>
+			<th>Nama</th>
+			<th>Released Year</th>
+			<th>Genre</th>
+			<th>Production House</th>
+			<th>Action</th>
+		</tr>
+		
+		<% allMovie.forEach( function(movie, index) { %>
+			<tr>
+				<td><%= movie.name %></td>
+				<td><%= movie.released_year %></td>
+				<td><%= movie.genre %></td>
+				<td><%= movie.name_prodHouse %></td>
+				<td>
+					<a href="/movies/edit/<%= movie.id %>">Edit</a>
+				</td>
+			</tr>
+		<% }); %>
+	</table>
 </body>
 </html>
