--- a/views/prodhouse.ejs
+++ b/views/prodhouse.ejs
@@ -6,5 +6,19 @@
 </head>
 <body>
 	<h1>Halaman Prod. House</h1>
+
+	<table border="1">
+		<tr>
+			<th>Nama</th>
+			<th>City</th>
+		</tr>
+
+		<% allProdHouse.forEach( function(house, index) { %>
+			<tr>
+				<td><%= house.name_prodHouse %></td>
+				<td><%= house.origin_city %></td>
+			</tr>
+		<% }); %>
+	</table>
 </body>
 </html>
