--- a/views/productionHouse.ejs
+++ b/views/productionHouse.ejs
@@ -6,5 +6,21 @@
   </head>
   <body>
     <h1>Halaman Prod. House</h1>
+    <table border="1px">
+      <thead>
+        <tr>
+          <th>nama</th>
+          <th>city</th>
+        </tr>
+      </thead>
+      <% rows.forEach(data=>{%>
+      <tbody>
+        <tr>
+          <td><%= data.name_prodHouse %></td>
+          <td><%= data.origin_city %></td>
+        </tr>
+      </tbody>
+      <%})%>
+    </table>
   </body>
 </html>
