--- a/views/prod.ejs
+++ b/views/prod.ejs
@@ -4,9 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Halaman Movies</title>
+    <title>Halaman Prod. House</title>
 </head>
 <body>
-    <p>Halaman Movies</p>
+    <p>Halaman Prod. House</p>
+    <table>
+        <tr>
+            <td>No</td>
+            <td>Nama</td>
+            <td>City</td>
+        </tr>
+        <% 
+        
+        let no = 1;
+
+        dataProd.forEach((rows)=>{ 
+            
+        %>
+        <tr>
+            <td><%= no %></td>
+            <td><%= rows.name_prodHouse %></td>
+            <td><%= rows.origin_city %></td>
+        </tr>
+        <%
+        
+            no++;
+        
+            }) 
+            
+        %>
+    </table>
 </body>
 </html>
