--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -8,5 +8,45 @@
 </head>
 <body>
     <p>Halaman Movies</p>
+    <table>
+        <tr>
+            <td>No</td>
+            <td>Released Year</td>
+            <td>Genre</td>
+            <td>Production House</td>
+            <td>Action</td>
+        </tr>
+        <% 
+        
+        let no = 1;
+
+         dataMovies.forEach((rows)=>{ 
+            
+        %>
+            <tr>
+                <td>
+                    <%= no %>
+                </td>
+                <td>
+                    <%= rows.released_year %>
+                </td>
+                <td>
+                    <%= rows.genre %>
+                </td>
+                <td>
+                    <%= rows.name_prodHouse %>
+                </td>
+                <td>
+                    <a href="/movies/edit/<%= rows.id %>">Edit</a>
+                </td>
+            </tr>
+            <%
+        
+            no++;
+        
+            }) 
+            
+        %>
+    </table>
 </body>
 </html>
