--- a/views/editMovie.ejs
+++ b/views/editMovie.ejs
@@ -1,14 +1,15 @@
 <form>
   <div class="form-group">
-    <label for="email">Email address:</label>
-    <input type="email" class="form-control" id="email">
+    <label for="email">Name</label>
+    <input type="text" class="form-control" name="name" value="<%=rows[0].name%>">
   </div>
   <div class="form-group">
-    <label for="pwd">Password:</label>
-    <input type="password" class="form-control" id="pwd">
+    <label for="email">Released Year</label>
+    <input type="text" class="form-control" name="name" value="<%=rows[0].released_year%>">
   </div>
-  <div class="checkbox">
-    <label><input type="checkbox"> Remember me</label>
+  <div class="form-group">
+    <label for="email">Genre</label>
+    <input type="text" class="form-control" name="name" value="<%=rows[0].genre%>">
   </div>
   <button type="submit" class="btn btn-default">Submit</button>
 </form>
