--- a/views/partials/editMovie.ejs
+++ b/views/partials/editMovie.ejs
@@ -1,14 +1,14 @@
 <form>
   <div class="form-group">
     <label for="email">Name</label>
-    <input type="text" class="form-control" name="name" value="<%=rows.name%>">
+    <input type="text" class="form-control" name="name" value="<%=rows[0].name%>">
   </div>
   <div class="form-group">
     <label for="email">Released Year</label>
     <input type="text" class="form-control" name="name">
   </div>
   <div class="form-group">
-    <label for="email">Name</label>
+    <label for="email">Genre</label>
     <input type="text" class="form-control" name="name">
   </div>
   <button type="submit" class="btn btn-default">Submit</button>
