All Production dropdown

--- a/views/edit-movies.ejs
+++ b/views/edit-movies.ejs
@@ -5,6 +5,7 @@
 	<title>Edit</title>
 </head>
 <body>
+	
 	<form action="/edit" method="POST">
 		<input type="hidden" id="id" name="id" value="<%= movie.id %>">
   		<input type="text" id="name" name="name" placeholder="name" value="<%= movie.name %>">
@@ -17,7 +18,11 @@
   		</select>
 
   		<select name="prodHouseId" id="prodHouseId">
-  		
+  			<% allHouse.forEach( function(house, index) { %>
+			<tr>
+				<option value="<%= house.id %>"><%= house.name_prodHouse %></option>
+			</tr>
+		<% }); %>
   		</select>
 	</form>
 </body>
