--- a/views/edit-movies.ejs
+++ b/views/edit-movies.ejs
@@ -6,10 +6,10 @@
 </head>
 <body>
 	
-	<form action="/edit" method="POST">
+	<form action="/movies/edit/" method="POST">
 		<input type="hidden" id="id" name="id" value="<%= movie.id %>">
   		<input type="text" id="name" name="name" placeholder="name" value="<%= movie.name %>">
-  		<input type="text" id="released_year" released_year="released_year" placeholder="released_year" value="<%= movie.released_year %>">
+  		<input type="text" id="released_year" name="released_year" placeholder="released_year" value="<%= movie.released_year %>">
   		<select name="genre" id="genre">
   			<option value="action">action</option>
   			<option value="comedy">comedy</option>
@@ -24,6 +24,8 @@
 			</tr>
 		<% }); %>
   		</select>
+
+  		<input type="submit" value="Kirim">
 	</form>
 </body>
 </html>
