--- a/views/edit-movies.ejs
+++ b/views/edit-movies.ejs
@@ -16,13 +16,14 @@
   			<option value="drama">drama</option>
   			<option value="horor">horor</option>
   		</select>
-
   		<select name="prodHouseId" id="prodHouseId">
   			<% allHouse.forEach( function(house, index) { %>
-			<tr>
-				<option value="<%= house.id %>"><%= house.name_prodHouse %></option>
-			</tr>
-		<% }); %>
+    			<tr>
+    				<option <%= (typeof movie != 'undefined' && movie != null && movie.prodHouseId == house.id ? 'selected' : '' ) %> 
+              value="<%= house.id %>"><%= house.name_prodHouse %>    
+            </option>
+    			</tr>
+		  <% }); %>
   		</select>
 
   		<input type="submit" value="Kirim">
