--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -6,5 +6,21 @@
   </head>
   <body>
     <h1><%= msg %></h1>
+
+
+    <table>
+      <tr>
+        <th>Movies id</th>
+        <th>name</th>
+        <th>released_year</th>
+        <th>genre</th>
+        <th>prodHouse</th>
+      </tr>
+      <%= data.forEach((row)=>){%>
+
+
+      <%=}%>
+
+    </table>
   </body>
 </html>
