--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -21,7 +21,7 @@
 			<td><%=movie.name%></td>
 			<td><%=movie.released_year%></td>
 			<td><%=movie.genre%></td>
-			<td><%=movie.name_prodHouse%></td>
+			<td><%=movie.prodName%></td>
 			<td>
 				<a href="/movies/edit/<%=movie.id%>">Edit</a>
 			</td>
