--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -11,8 +11,8 @@
         <tr>
           <td><%=dataMovies[i].name%></td>
           <td><%=dataMovies[i].released_year%></td>
-          <td><%=dataMovies[i].genre</td>
-          <td><%=dataMovies[i].name_prodHouse</td>
+          <td><%=dataMovies[i].genre%></td>
+          <td><%=dataMovies[i].name_prodHouse%></td>
         </tr>
       <%}%>
     </table>
