--- a/views/prodHouses.ejs
+++ b/views/prodHouses.ejs
@@ -11,7 +11,7 @@
       <% for(let i = 0; i < dataHouses.length; i++){%>
         <tr>
           <td><%=dataHouses[i].name_prodHouse%></td>
-          <td><%=dataHouse[i].origin_city%></td>
+          <td><%=dataHouses[i].origin_city%></td>
         </tr>
       <%}%>
     </table>
