--- a/views/productionHouse.ejs
+++ b/views/productionHouse.ejs
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.0/css/bulma.min.css">
   </head>
   <body>
-
+    <section class="hero is-primary">
+  <div class="hero-body">
+    <div class="container">
     <nav class="breadcrumb is-centered" aria-label="breadcrumbs">
       <ul>
         <li><a href="/">Home</a></li>
@@ -16,7 +18,7 @@
       </ul>
     </nav>
       <h1 class="title">Halaman Prod. House</h1>
-      <table class="table">
+      <table class="table is-bordered is-striped is-narrow is-fullwidth">
         <thead>
         <tr>
            <th>Name</th>
