--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,9 @@
     <title>Home</title>
   </head>
   <body>
-
+    <section class="hero is-primary">
+  <div class="hero-body">
+    <div class="container">
     <nav class="breadcrumb is-centered" aria-label="breadcrumbs">
       <ul>
         <li><a href="/">Home</a></li>
@@ -15,6 +17,17 @@
         <li><a href="/prodHouses">ProHouses</a></li>
       </ul>
     </nav>
-    <h1 class="title">HOME</h1>
+    <section class="hero is-medium is-primary is-bold">
+  <div class="hero-body">
+    <div class="container">
+      <h1 class="title">
+        Welcome
+      </h1>
+      <h2 class="subtitle">
+        Home Movies
+      </h2>
+    </div>
+  </div>
+</section>
   </body>
 </html>
