--- a/views/movie-edit.ejs
+++ b/views/movie-edit.ejs
@@ -10,68 +10,65 @@
     </header>
 
     <form action="/movies/edit/<%=dataMovie.id%>" method="POST">
-        Name :
-        <input type="text" name="name" value="<%= dataMovie.name%>" /> Year :
-        <input type="text" name="year" value="<%= dataMovie.released_year%>" />
-
-
+        Movie Name :
+        <input type="text" name="name" value="<%= dataMovie.name%>" placeholder="Name" /> Year :
+        <input type="text" name="released_year" value="<%= dataMovie.released_year%>" placeholder="Released Year" /> Genre:
         <select name="genre">
             <% if(dataMovie.genre == 'comedy') {%>
                 <option value="comedy" selected>
-                    Comedy
+                    comedy
                 </option>
                 <option value="action">
-                      Action
-                    </option>
-                    <option value="horor">
-                            Horor
-                         </option>
-                         <option value="drama">
-                                Drama
-                             </option>
+                      action
+                </option>
+                <option value="horor">
+                    horor
+                </option>
+                <option value="drama">
+                    drama
+                </option>
             <%} else if(dataMovie.genre == 'drama') {%>
                 <option value="comedy">
-                    Comedy
+                    comedy
                 </option>
                 <option value="action">
-                      Action
-                    </option>
-                    <option value="horor">
-                            Horor
-                         </option>
-                         <option value="drama" selected>
-                                Drama
-                             </option>
+                    action
+                </option>
+                <option value="horor">
+                    horor
+                </option>
+                <option value="drama" selected>
+                    drama
+                </option>
             <%} else if(dataMovie.genre == 'action') {%>
                 <option value="comedy">
-                    Comedy
+                    comedy
                 </option>
                 <option value="action" selected>
-                      Action
-                    </option>
-                    <option value="horor">
-                            Horor
-                         </option>
-                         <option value="drama">
-                                Drama
-                             </option>
+                    action
+                </option>
+                <option value="horor">
+                    horor
+                </option>
+                <option value="drama">
+                    drama
+                </option>
             <%} else if(dataMovie.genre == 'horor') {%>
                 <option value="comedy">
-                    Comedy
+                    comedy
                 </option>
                 <option value="action">
-                      Action
+                      action
                     </option>
                     <option value="horor" selected>
-                            Horor
+                            horor
                          </option>
                          <option value="drama">
-                                Drama
+                                drama
                              </option>
             <%}%>
-
-            </select>
-
+                            
+            </select> Production House :
         <select name="prodHouseId"> 
             <% dataProdHouse.forEach((ph)=> { 
                 if(ph.id == dataMovie.prodHouseId){
@@ -81,12 +78,11 @@
                         <%= ph.name_prodHouse%>
                 </option>
                 <% }else{%>
-                    <option value="<%= ph.id%>">
+                <option value="<%= ph.id%>">
                             <%= ph.name_prodHouse%>
-                    </option>
+                </option>
                 <%}})%> 
         </select>
-
         <input type="submit" value="Save">
     </form>
 </body>
