--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="assets/css/bulma.min.css" type="text/css">
   <link rel="stylesheet" href="assets/css/mystyle.css" type="text/css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Movies</title>
 </head>
 <body>
@@ -30,9 +31,12 @@
             <td><%=data_Movies[i].name%></td>
             <td><%=data_Movies[i].released_year%></td>
             <td><%=data_Movies[i].genre%></td>
+
             <td><%=data_Movies[i].name_prodHouse%></td>
+
             <td>
-              <a href="/movies/edit/:id">EDIT</a>
+              <a class="button is-small" href="/movies/edit/<%=data_Movies[i].id%>">EDIT</a>
+              <a class="button is-small" href="/movies/delete/<%=data_Movies[i].id%>">DELETE</a>
             </td>
           </tr>
         <%}%>
