--- a/lama views/prodHouse.ejs
+++ b/lama views/prodHouse.ejs
@@ -33,7 +33,7 @@
           </tr>
         </thead>
         <tbody>
-          <%rowsProdHouse.forEach (row=> {%>
+          <%dataProd.forEach (row=> {%>
             <tr>
               <td><%= row.id %></td>
               <td><%= row.name_prodHouse %></td>
