--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -9,7 +9,7 @@
 	
 	<table border="1">
 		<tr>
-			<th>Nama</th>
+			<th>Movie</th>
 			<th>Released Year</th>
 			<th>Genre</th>
 			<th>Production House</th>
