--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -1,26 +1,52 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Movies</title>
-  </head>
-  <body>
-    <h1><%= msg %></h1>
-
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Halaman Movies</title>
+</head>
+<body>
+    <p>Halaman Movies</p>
     <table>
-      <tr>
-        <th>Movies id</th>
-        <th>name</th>
-        <th>released_year</th>
-        <th>genre</th>
-        <th>prodHouse</th>
-      </tr>
-      <%= data.forEach((row)=>){%>
+        <tr>
+            <td>No</td>
+            <td>Released Year</td>
+            <td>Genre</td>
+            <td>Production House</td>
+            <td>Action</td>
+        </tr>
+        <%
 
+        let no = 1;
 
-      <%=}%>
+         movies.forEach((rows)=>{
 
+        %>
+            <tr>
+                <td>
+                    <%= no %>
+                </td>
+                <td>
+                    <%= rows.released_year %>
+                </td>
+                <td>
+                    <%= rows.genre %>
+                </td>
+                <td>
+                    <%= rows.name_prodHouse %>
+                </td>
+                <td>
+                    <a href="/movies/edit/<%= rows.id %>">Edit</a>
+                </td>
+            </tr>
+            <%
+
+            no++;
+
+            })
+
+        %>
     </table>
-  </body>
+</body>
 </html>
