--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -23,21 +23,10 @@
           <td><%= data.released_year %></td>
           <td><%= data.genre %></td>
           <td><%= data.name_prodHouse %></td>
-          <td><a href="/movies/edit/:id">edit</a></td>
+          <td><a href="/movies/edit/<%= data.id %>">edit</a></td>
         </tr>
       </tbody>
       <%})%>
     </table>
-
-
-    <br>
-    <br>
-    <form class="" method="post">
-      <input type="text" name="name" value="" placeholder="name movie">
-        <input type="text" name="year" value="" placeholder="release year">
-          <input type="text" name="genre" value="" placeholder="genre">
-            <input type="text" name="nameprod" value="" placeholder="name prod">
-
-    </form>
   </body>
 </html>
