--- a/views/editmovies.ejs
+++ b/views/editmovies.ejs
@@ -7,18 +7,41 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="" method="post">
-        <input type="text" name="name" value="<%= dataMovies.name %>">
-        <input type="text" name="year" value="<%= dataMovies.released_year %>">
+    <form action="/movies/edit/<%= dataMovies[0].id %>" method="post">
+        <input type="text" name="name" value="<%= dataMovies[0].name %>" placeholder="Name Movies">
+        <input type="text" name="year" value="<%= dataMovies[0].released_year %>" placeholder="Year Releas">
         <select name="genre">
-            <option value="dataMovies.gender"><%= dataMovies.gender %></option>
+            <% 
+                for(let i = 0; i < genre.genre.length;i++){ 
+                
+                if(genre.genre[i] == dataMovies[0].genre){
+                    
+            %>
+                
+                <option value="<%=genre.genre[i]%>" selected><%= genre.genre[i] %></option>
+            
+            <% 
+
+                }else{
+
+            %>
+
+                <option value="<%=genre.genre[i]%>"><%= genre.genre[i] %></option>
+
+            <%
+                
+                }
+        
+                }
+                
+            %>
         </select>
         <select name="prod">
             <% 
             
             dataProd.forEach((rowsProd)=>{ 
                 
-                if(rowsProd.id == dataMovies.prodHouseId){
+                if(rowsProd.id == dataMovies[0].prodHouseId){
             
             %>
                     <option value="<%= rowsProd.id %>" selected><%= rowsProd.name_prodHouse %></option>
