--- a/views/prod.ejs
+++ b/views/prod.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>Halaman Prod. House</p>
-    <table>
+    <table border="1">
         <tr>
             <td>No</td>
             <td>Nama</td>
