live coding sesi 2

--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -5,19 +5,30 @@
     <title></title>
   </head>
   <body>
-    <table>
-  <tr>
-    <th>Name</th>
-    <th>Released Year</th>
-    <th>Genre</th>
-  </tr>
-
-  <%rows.forEach((el)=>{%>
-  <tr>
-    <td ><%=el.name %> </td>
-    <td> <%=el.released_year %> </td>
-    <td> <%=el.genre %> </td>
-  </tr>
-  <%})%>
+    <h1>Halaman Movie</h1>
+    <table border="1">
+      <thead>
+        <tr>
+          <th>id</th>
+          <th>Movie</th>
+          <th>Released Year</th>
+          <th>genre</th>
+          <th>Production House</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% dataMovie.forEach(movie => { %>
+          <tr>
+            <td><%= movie.id %></td>
+            <td><%= movie.name %></td>
+            <td><%= movie.released_year %></td>
+            <td><%= movie.genre %></td>
+            <td><%= movie.name_prodHouse %></td>
+            <td><a href="/movies/edit/<%= movie.id %>">Edit</a></td>
+          </tr>
+        <% }) %>
+      </tbody>
+    </table>
   </body>
 </html>
