--- a/views/prodHouses.ejs
+++ b/views/prodHouses.ejs
@@ -8,5 +8,21 @@
     </head>
     <body>
         <h1>Halaman Prod. House</h1>
+        <table>
+            <tr>
+              <th>ID</th>
+              <th>Name</th>
+              <th>Country</th>
+            </tr>
+            <tr><%rows.forEach(data=>{%>
+                <td><%=data.id%></td>
+                <td><%=data.name_prodHouse%></td>
+                <td><%=data.origin_city%></td>
+           
+            
+            </tr>
+            <%})%>
+          </table>
     </body>
+
 </html>
